@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.308 (gritter) 7/21/05
+.\"     Sccsid: @(#)nail.1	2.309 (gritter) 7/26/05
 .\"
-.TH NAIL 1 "7/21/05" "nail 11.25" "User Commands"
+.TH NAIL 1 "7/26/05" "nail 11.25" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -3021,6 +3021,16 @@ are understood.
 A string to put at the end of each new message.
 The escape sequences `\fB\et\fR' (tabulator) and `\fB\en\fR' (newline)
 are understood.
+.TP
+.B maximum-unencoded-line-length
+Messages that contain lines longer than the value of this variable
+are encoded in quoted-printable
+even if they contain only ASCII characters.
+The maximum effective value is 950.
+If set to 0,
+all ASCII text messages are encoded in quoted-printable.
+S/MIME signed messages are always encoded
+in quoted-printable regardless of the value of this variable.
 .TP
 .B MBOX
 The name of the mbox file.
